# cfunctions

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  HelloWorld.c
src/stdarg/: CMakeLists.txt  stdarg-demo.c
src/stdio/: CMakeLists.txt  stdio-demo.c
src/stdlib/: CMakeLists.txt  stdlib-demo.c
src/string/: CMakeLists.txt  string-demo.c
